--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,3 +25,5 @@ services:
         environment:
             - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
             - MYSQL_DATABASE=${DB_NAME}
+        volumes:
+            - ./var/db:/var/lib/mysql
