--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
         ports:
             - ${APP_PORT}:80
         volumes:
-            - .:/var/www
+            - .:/var/www:cached
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
