feat: better composer configuration (acf pro support) + acf save json + version htaccess + allow file_mods for languages

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ vendor/
 !public/
 public/*
 !public/wp-config.php
+!public/.htaccess
 !public/wp-content/
 public/wp-content/*
 !public/wp-content/themes/
