--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # Available env variables: ./public/wp-config.php
 
-# Docker
-WP_PORT=8080
-PMA_PORT=8081
-MAILDEV_PORT=8082
+# WP
+WP_URL=http://localhost:8080
+WP_DEBUG=true
 
 # Database
 DB_HOST=mysql
@@ -12,12 +11,13 @@ DB_USER=root
 DB_PASSWORD=root
 
 # Mail
+SMTP_FROM_EMAIL=john.doe@domain.local
+SMTP_FROM_NAME="John Doe"
 SMTP_HOST=maildev
+SMTP_PORT=25
 SMTP_AUTH=0
-
-# WP
-WP_URL=http://localhost:8080
-WP_DEBUG=true
+# SMTP_USER=
+# SMTP_PASS=
 
 # Generate your keys here: https://wordplate.github.io/salt/
 AUTH_KEY=
@@ -28,3 +28,8 @@ AUTH_SALT=
 SECURE_AUTH_SALT=
 LOGGED_IN_SALT=
 NONCE_SALT=
+
+# Docker
+WP_PORT=8080
+PMA_PORT=8081
+MAILDEV_PORT=8082
