--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ public/wp-content/*
 !public/wp-content/themes/
 public/wp-content/themes/*
 !public/wp-content/themes/custom/
+public/wp-content/themes/custom/dist/
 
 # misc
 .DS_Store
 .env
 .idea/
 var/
+node_modules/
