--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "npm run watch",
-    "watch": "encore dev --watch",
+    "start": "encore dev --watch",
     "build": "encore production"
   },
   "browserslist": [
@@ -15,11 +14,6 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.22",
     "autoprefixer": "^8.6.3",
-    "imagemin-gifsicle": "^6.0.1",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^6.0.1",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webpack-plugin": "^2.1.5",
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
