misc: fix asset helper + update composer

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DB_HOST=mysql
 DB_NAME=wordpress
 DB_USER=root
 DB_PASSWORD=root
+DB_TABLE_PREFIX=wp_
 
 # Mail
 SMTP_FROM_EMAIL=john.doe@domain.local
