--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,4 @@ services:
             - MYSQL_DATABASE=${DB_NAME}
         volumes:
             - ./var/db:/var/lib/mysql
+            - ./docker/mysql/custom.cnf:/etc/mysql/conf.d/custom.cnf
